--- a/app/style/style.css
+++ b/app/style/style.css
@@ -17,7 +17,7 @@ body {
   position: absolute;
   width: 100%;
   padding: 35px 0;
-  transition: background 0.3s ease;
+  transition: background 0.3s;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -36,7 +36,7 @@ body {
     letter-spacing: 3px;
     margin: 0 40px;
     text-decoration: none;
-    transition: color 0.3s ease-out, opacity 0.3s; }
+    transition: color 0.3s, opacity 0.3s; }
     .menu__link:hover, .menu__link:focus {
       color: #64c29e;
       opacity: 0.7; }
@@ -207,7 +207,7 @@ body {
       width: 100%;
       opacity: 0;
       cursor: pointer;
-      transition: opacity 0.3s ease;
+      transition: opacity 0.3s;
       background-color: rgba(100, 194, 158, 0.8); }
       .gallery__items .gallery__item-link:hover, .gallery__items .gallery__item-link:focus {
         opacity: 1; }
@@ -267,7 +267,7 @@ body {
     padding: 16px 50px;
     text-transform: uppercase;
     cursor: pointer;
-    transition: background-color 0.3s ease-out, opacity 0.3s; }
+    transition: background-color 0.3s, opacity 0.3s; }
     .discover__button:hover, .discover__button:focus {
       background-color: #64c29e;
       border: 1px solid #64c29e; }
@@ -305,7 +305,7 @@ body {
     line-height: 24px;
     color: #fff;
     cursor: pointer;
-    transition: background-color 0.3s ease-out; }
+    transition: background-color 0.3s; }
     .contact-with-us__btn:hover, .contact-with-us__btn:focus {
       background-color: #ff5654; }
     .contact-with-us__btn:active {
@@ -358,7 +358,7 @@ body {
     display: flex; }
     .footer .social-icons__link {
       margin-right: 15px;
-      transition: opacity 0.3s ease; }
+      transition: opacity 0.3s; }
       .footer .social-icons__link:last-child {
         margin-right: 0; }
       .footer .social-icons__link:hover, .footer .social-icons__link:focus {
@@ -407,7 +407,7 @@ body {
     height: 40px;
     cursor: pointer;
     z-index: 2;
-    transition: transform 0.5s, opacity 0.3s; }
+    transition: transform 0.3s, opacity 0.3s; }
     .hamburg-menu:hover, .hamburg-menu:focus {
       opacity: 0.7; }
     .hamburg-menu:active {
@@ -420,7 +420,7 @@ body {
       left: 50%;
       transform: translate(-50%, -50%);
       box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-      transition: transform .5s;
+      transition: transform 0.3s;
       background: #64c29e;
       border: none; }
       .hamburg-menu__burger-nav :hover:after {
@@ -432,7 +432,7 @@ body {
     position: absolute;
     top: 24px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-    transition: top .5s, transform .5s;
+    transition: top 0.3s, transform 0.3s;
     background-color: #64c29e; }
   .hamburg-menu__burger-nav:before {
     top: 8px;
