--- a/app/style/style.scss
+++ b/app/style/style.scss
@@ -285,7 +285,7 @@ body {
       width: 100%;
       opacity: 0;
       cursor: pointer;
-      transition: opacity $TransitionDuration ;
+      transition: opacity $TransitionDuration;
       background-color: rgba(100, 194, 158, 0.8);
       &:hover,
       &:focus {
@@ -419,7 +419,7 @@ body {
     line-height: 24px;
     color: #fff;
     cursor: pointer;
-    transition: background-color $TransitionDuration ;
+    transition: background-color $TransitionDuration;
     &:hover,
     &:focus {
       background-color: #ff5654;
@@ -591,7 +591,8 @@ body {
     }
   }
 
-  .hamburg-menu__burger-nav:before, .hamburg-menu__burger-nav:after {
+  .hamburg-menu__burger-nav:before,
+  .hamburg-menu__burger-nav:after {
     content: '';
     width: 100%;
     height: 6px;
@@ -655,9 +656,7 @@ body {
   .contact {
     padding: 125px 70px;
   }
-
   .footer {
-
     flex-direction: column;
     align-items: start;
     &__item {
